--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - 3306
     volumes:
-      - mariadb_data:/var/lib/mysql
+      - mariadb_data:/bitnami/mariadb
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:5.2.1
     restart: always
@@ -24,7 +24,6 @@ services:
       PMA_PASSWORD: moodle
     ports:
       - 8080:80
-      - 8443:443
     depends_on:
       - mariadb
   moodle:
